add time example